[package]
name = "trial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
open = "2.0" 
serde_json = "1"
url = "2.4.1"
tokio = { version = "1.32.0", features = ["full"] }
tiny_http = "0.11.0"